[package]
name = "ptx"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[lib]

[dependencies]
lalrpop-util = "0.19"
regex = "1"
quick-error = "1.2"
bit-vec = "0.6"
half ="1.6"
bitflags = "1.2"

[build-dependencies.lalrpop]
version = "0.19"
features = ["lexer"]

[dev-dependencies]
paste = "1.0"
